# netgen

./: .gitignore  Changes  Makefile  README  README.md  TO_DO  VERSION  configure  defs.mak  rules.mak
.github/workflows/: main.yml
base/: Depend  Makefile  actel.c  actellib.c  anneal.c  bottomup.c  ccode.c  config.h  dbug.h  embed.c  embed.h  ext.c  flatten.c  flatten.c.bak  flatten.h  greedy.c  hash.c  hash.h  inetcomp.c  netcmp.c  netcmp.c.orig  netcmp.h  netfile.c  netfile.h  netgen.c  netgen.h  ntk.c  objlist.c  objlist.h  pdutils.c  pdutils.h  place.c  print.c  print.h  proto.h  query.c  query.h  random.c  regexp.h  spice.c  (+11 more)
dbug/: Makefile  analyze.c  dbug.c  dbug.h  factorial.c  llib-ldbug  main.c  ranlib.sh  useful.h  user.r  user.t  vargs.h
doc/: Makefile  netgen.doc
lib/: Makefile  ntk2adl.sh  spice  spice.bot  spice.top
netgen/: Depend  Makefile  inetcomp.c  netcomp.c  netgen_main.c  ntk2adl.c  ntk2xnf.c  symbol.map
python/: Makefile  consoletext.py  helpwindow.py  lvs_manager.py  lvs_manager.py.in  tksimpledialog.py  tooltip.py  treeviewsplit.py
regexp/: fixtabs.c  makefile.pc  makefile.unx  regerror.c  regexp.3  regexp.c  regexp.doc  regexp.h  regsub.c  tests  tests.bad  timer.c  try.c
scripts/: config.status  configure  configure.in  configure.in.bak  configure.in.orig  defs.mak  defs.mak.in  makedbh  mkdirs  netgen.spec.in
tcltk/: Depend  Makefile  console.tcl  netgen.sh  netgen.sh.in  netgen.tcl  netgen.tcl.bak  netgen.tcl.in  netgenexec.c  tclnetgen.c  tkcon.tcl  tmp.out
